--- a/app.json
+++ b/app.json
@@ -32,6 +32,7 @@
       "expo-router",
       "expo-sqlite",
       "expo-asset",
+      "@react-native-community/datetimepicker",
       "expo-notifications"
     ]
   }
